# RobotDevKit

./: .gitignore  CMakeLists.txt  README.md
cmake/: RobotDevKitConfig.cmake
core/: CMakeLists.txt
core/inc/: motion.h  motor.h  pid.h  rdk_core.h
core/src/: motion.cpp  motor.cpp  pid.cpp
include/: motion.h  motor.h  pid.h
modules/core/: CMakeLists.txt
modules/core/include/rdk/: core.h  core.hpp
modules/core/include/rdk/core/container/: container.h
modules/core/include/rdk/core/control/: pid.h
modules/core/include/rdk/core/imu/: wit_private_protocol.h
modules/core/include/rdk/core/lidar/ldrobot/: ld_lidar.h
modules/core/include/rdk/core/motor/: motor.h
modules/core/include/rdk/core/motor/damiao/: damiao_controller.h
modules/core/include/rdk/core/motor/dji/: c6xx_controller.h  dji_motor.h  m2006_motor.h  m3508_motor.h
modules/core/include/rdk/core/motor/general/: encoder_motor.h
modules/core/include/rdk/core/serial_port/: serial_port.hpp
modules/core/include/rdk/core/servo/: servo.h
modules/core/include/rdk/core/servo/fashion_star/: fashion_star_protocol.h
modules/core/include/rdk/core/servo/feetech/: feetech_SMS.h  feetech_protocol.h  feetech_servo.h
modules/core/include/rdk/core/servo/huaner/: huaner_protocol.h
modules/core/include/rdk/core/transfer/: binary_transfer.h  can_bus.h  circular_buffer.h  crc.h  io_stream.h  reliable_binary_transfer.h  serial_port.h  serial_to_can.h  simple_binary_transfer.h  simple_message_transfer.h  tcp_port.h
modules/core/include/rdk/core/underpan/: differential_motion.h  omnidirectional_motion.h
modules/core/include/rdk/core/visualization/: point_cloud_view.h
modules/core/include/rdk/core/vofa/: vofa_tcp_server.h
modules/core/src/container/pair/: key_value_pair.cpp
modules/core/src/control/: pid.cpp
modules/core/src/imu/: wit_private_protocol.cpp
modules/core/src/lidar/ldrobot/: ld_lidar.cpp
modules/core/src/motor/damiao/: damiao_controller.cpp
modules/core/src/motor/dji/: c6xx_controller.cpp  dji_motor.cpp  m2006_motor.cpp  m3508_motor.cpp
modules/core/src/motor/general/: encoder_motor.cpp
modules/core/src/serial_port/: serial_port.cpp
modules/core/src/servo/: servo.cpp
modules/core/src/servo/fashion_star/: fashion_star_protocol.cpp
modules/core/src/servo/feetech/: feetech_SCS.cpp  feetech_SMS.cpp  feetech_STS.cpp  feetech_protocol.cpp
modules/core/src/servo/huaner/: huaner_protocol.cpp
modules/core/src/transfer/: binary_transfer.cpp  can_bus.cpp  circular_buffer.cpp  crc.cpp  io_stream.cpp  reliable_binary_transfer.cpp  serial_port.cpp  serial_to_can.cpp  simple_binary_transfer.cpp  simple_message_transfer.cpp  tcp_port.cpp
modules/core/src/underpan/: mecanum_motion.cpp  omnidirectional_motion.cpp
modules/core/src/visualization/: point_cloud_view.cpp
modules/core/src/vofa/: vofa_tcp_server.cpp
modules/core/test/: test_c6xx_controller.cpp  test_damiao_controller.cpp  test_dji_motor.cpp  test_fashion_star_servo.cpp  test_feetech_servo.cpp  test_hik_camera.cpp  test_huaner_servo.cpp  test_jy901b_imu.cpp  test_key_value_pair.cpp  test_ld_lidar.cpp  test_m3508_motor.cpp  test_point_cloud_view.cpp  test_reliable_binary_transfer.cpp  test_reliable_binary_transfer_with_stm32.cpp  test_serial_port.cpp  test_serial_to_can.cpp  test_simple_binary_transfer.cpp  test_simple_binary_transfer_with_stm32.cpp  test_simple_message_transfer.cpp  test_simple_message_transfer_with_stm32.cpp  test_tcp_client_binary_transfer.cpp  test_tcp_client_message_transfer.cpp  test_tcp_client_simple_binary_transfer.cpp  test_tcp_port.cpp  test_tcp_port_client.cpp  test_tcp_port_server.cpp  test_tcp_server_binary_transfer.cpp  test_tcp_server_message_transfer.cpp  test_tcp_server_simple_binary_transfer.cpp
motion/: CMakeLists.txt
motion/src/: motion.cpp
pid/: CMakeLists.txt
pid/inc/: pid.h
pid/src/: pid.cpp
samples/linux/ImageTransferDemo/: CMakeLists.txt
samples/linux/ImageTransferDemo/src/: client.cpp  server.cpp
samples/linux/PlanePositioningSystemDisplay/: CMakeLists.txt
samples/linux/PlanePositioningSystemDisplay/src/: main.cpp
samples/linux/ReliableBinaryTransferDemo/: CMakeLists.txt
samples/linux/ReliableBinaryTransferDemo/src/: main.cpp
samples/omnidirectional_motion/R2Master/: CMakeLists.txt  README.md
samples/omnidirectional_motion/R2Master/src/: main.cpp
samples/omnidirectional_motion/R2Slave/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  R2Slave.ioc  README.md  STM32F427IIHX_FLASH.ld  STM32F427IIHX_RAM.ld
samples/omnidirectional_motion/R2Slave/Core/Inc/: RobotMain.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
samples/omnidirectional_motion/R2Slave/Core/Src/: RobotMain.cpp  can.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
samples/stm32/ReliableBinaryTransferDemo/: .project  CMakeLists.txt  ReliableBinaryTransferDemo.ioc
samples/stm32/ReliableBinaryTransferDemo/Core/Inc/: RobotMain.h
samples/stm32/ReliableBinaryTransferDemo/Core/Src/: RobotMain.cpp  stm32f4xx_it.c
samples/stm32/SimpleBinaryTransferDemo/: .project  CMakeLists.txt  SimpleBinaryTransferDemo.ioc  stm32f4discovery.cfg
samples/stm32/SimpleBinaryTransferDemo/Core/Inc/: RobotMain.h
samples/stm32/SimpleMessageTransferDemo/: .project  CMakeLists.txt  CMakeLists_template.txt  SimpleMessageTransferDemo.ioc  stm32f4discovery.cfg
samples/stm32f1/ReliableBinaryTransferF1Demo/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  ReliableBinaryTransferF1Demo.ioc  stm32f4discovery.cfg
samples/stm32f4/DR16Demo/: .cproject  .project  CMakeLists.txt  RemoteDemo.ioc
samples/stm32f4/HuanerServoDemo/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  HuanerServoDemo.ioc  stm32f4discovery.cfg
samples/stm32f4/ReliableBinaryTransferF4Demo/: .cproject  .mxproject  .project  CMakeLists.txt  ReliableBinaryTransferF4Demo.ioc  stm32f4discovery.cfg
sim/: CMakeLists.txt
sim/mechanical_arm/: CMakeLists.txt
sim/mechanical_arm/inc/: main.h
sim/mechanical_arm/src/: main.cpp
(+116 files in other folders)
