cmake_minimum_required(VERSION 3.10)

file(GLOB_RECURSE SOURCES "src/*.*")

add_library(rdk_core ${SOURCES})
target_include_directories(rdk_core PRIVATE include)


add_executable(test_serial_port test/test_serial_port.cpp)
target_include_directories(test_serial_port PRIVATE include)
target_link_libraries(test_serial_port rdk_core)

add_executable(test_simple_message_transfer test/test_simple_message_transfer.cpp)
target_include_directories(test_simple_message_transfer PRIVATE include)
target_link_libraries(test_simple_message_transfer rdk_core)

add_executable(test_simple_message_transfer_with_stm32 test/test_simple_message_transfer_with_stm32.cpp)
target_include_directories(test_simple_message_transfer_with_stm32 PRIVATE include)
target_link_libraries(test_simple_message_transfer_with_stm32 rdk_core)

add_executable(test_simple_binary_transfer test/test_simple_binary_transfer.cpp)
target_include_directories(test_simple_binary_transfer PRIVATE include)
target_link_libraries(test_simple_binary_transfer rdk_core)

add_executable(test_simple_binary_transfer_with_stm32 test/test_simple_binary_transfer_with_stm32.cpp)
target_include_directories(test_simple_binary_transfer_with_stm32 PRIVATE include)
target_link_libraries(test_simple_binary_transfer_with_stm32 rdk_core)

add_executable(test_reliable_binary_transfer test/test_reliable_binary_transfer.cpp)
target_include_directories(test_reliable_binary_transfer PRIVATE include)
target_link_libraries(test_reliable_binary_transfer rdk_core)

add_executable(test_reliable_binary_transfer_with_stm32 test/test_reliable_binary_transfer_with_stm32.cpp)
target_include_directories(test_reliable_binary_transfer_with_stm32 PRIVATE include)
target_link_libraries(test_reliable_binary_transfer_with_stm32 rdk_core)

add_executable(test_jy901b_imu test/test_jy901b_imu.cpp)
target_include_directories(test_jy901b_imu PRIVATE include)
target_link_libraries(test_jy901b_imu rdk_core)


install(TARGETS rdk_core ARCHIVE DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY include/rdk DESTINATION include/${PROJECT_NAME})